kubernetes/operations/headlamp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/part-of: operations
    homelab.<homelab-domain>/domain: operations
