kubernetes/operations/headlamp/deployment-args-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp
spec:
  template:
    spec:
      containers:
        - name: headlamp
          args:
            - -in-cluster
            - -in-cluster-context-name=main
            - -plugins-dir=/headlamp/plugins
